@@ -1,6 +1,8 @@
 Revision history for Perl extension App::Info.
 
 0.57
+      - Removed `Makefile.PL`. It used Module::Build internally, which is
+        deprecated.
 
 0.56  2011-02-22T21:02:39
       - Added `cgibin_physical()` and `cgibin_virtual()` to
